# WALL_E

./: .Dockerfile  .gitignore  Dockerfile  README.md  docker-compose.yml  gesture_recognition.py  requirements.txt  start-vnc.sh  whisper_mic.py
brain/: .env  README.md  example.py  pyproject.toml  requirements.txt  run.py  test.py
brain/src/brain/: connection.py  controller.py  fast_api.py  manager.py  prompt.py  routes.py  settings.py
brain/src/brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brain/src/brain/tools/: tools.py
gesture/: gesture_recognition.py  requirements.txt
